--- a/app/src/main/res/layout/fragment_location_page.xml
+++ b/app/src/main/res/layout/fragment_location_page.xml
@@ -12,8 +12,8 @@
     <!-- TODO: Update blank fragment layout -->
         <TextView
             android:id="@+id/textView232"
-            android:layout_width="164dp"
-            android:layout_height="31dp"
+            android:layout_width="163dp"
+            android:layout_height="57dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:text="@string/locations_of_the_parishes"
@@ -25,8 +25,8 @@
 
         <Button
             android:id="@+id/all_locations"
-            android:layout_width="139dp"
-            android:layout_height="93dp"
+            android:layout_width="148dp"
+            android:layout_height="46dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
@@ -166,7 +166,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="32dp"
             android:text="Florida"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button12" />
