--- a/app/src/main/res/layout/fragment_location_page.xml
+++ b/app/src/main/res/layout/fragment_location_page.xml
@@ -124,7 +124,7 @@
             app:layout_constraintTop_toBottomOf="@+id/maryLandLocation" />
 
         <Button
-            android:id="@+id/button10"
+            android:id="@+id/texasButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -136,7 +136,7 @@
             app:layout_constraintTop_toBottomOf="@+id/calButton" />
 
         <Button
-            android:id="@+id/button11"
+            android:id="@+id/MichiganButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -145,10 +145,10 @@
             android:text="Michigan"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button10" />
+            app:layout_constraintTop_toBottomOf="@+id/texasButton" />
 
         <Button
-            android:id="@+id/button12"
+            android:id="@+id/IllinoisButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -157,10 +157,10 @@
             android:text="Illinois"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button11" />
+            app:layout_constraintTop_toBottomOf="@+id/MichiganButton" />
 
         <Button
-            android:id="@+id/button13"
+            android:id="@+id/FloridaButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -171,7 +171,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button12" />
+            app:layout_constraintTop_toBottomOf="@+id/IllinoisButton" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
